<resources>
    <string name="app_name">it3cpartialappsgrp8</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="top_up_with">Top Up with</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="transaction_type">transaction type</string>
    <string name="my_qr">My QR</string>
    <string name="send">Send</string>
    <string name="top_up">Top Up</string>
    <string name="processing">Processing...</string>
    <string name="balance">Balance</string>
    <string name="loading">Loading...</string>
    <string name="earistcash">EARISTcash</string>
    <string name="account_id">Account Id</string>

</resources>